# csv-test-base

./: README.md  pyproject.toml
src/csv_test_base/: __init__.py  core.py
tests/: test_basic.py
