[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-test-base"
version = "0.1.0"
description = "Reusable library to load CSV-based Q/A pairs from resources for testing/flashcards"
readme = "README.md"
authors = [{ name = "Zlata Podlucka" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["csv", "flashcards", "testing", "vocabulary"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zlatkapod/csv-test-base"
Repository = "https://github.com/zlatkapod/csv-test-base"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
csv_test_base = ["resources/csv/**/*.csv", "resources/csv/*.csv"]

